--- a/assets/scss/foundation/_base.scss
+++ b/assets/scss/foundation/_base.scss
@@ -1,3 +1,6 @@
+@use "./font" as fs;
+@use "./color" as cl;
+
 *,
 *:before,
 *:after {
@@ -5,10 +8,11 @@
 }
 
 body {
+    font-family: fs.$default-font-family;
     font-size: 16px;
     line-height: 1.5;
     font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
-    color: #333;
+    color: cl.$c-mainFont;
 }
 
 a {
