--- a/assets/scss/foundation/_color.scss
+++ b/assets/scss/foundation/_color.scss
@@ -1,3 +1,12 @@
-// 接頭語はc-
 // 色の使われ方が決まっていれば役割
 // 汎用的に使用する場合は色で命名する
+
+$c-white: #FFFFFF;
+$c-gray: #F7F7F7;
+$c-lightPurple: #B8AED5;
+$c-mainFont: #333333;
+$c-mainButton: #250D65;
+$c-mainTitle: #391E88;
+$c-bgFooter: #120E19;
+$c-newsNow: #F1EBF8;
+$c-underline: #F5F534;
