--- a/assets/scss/foundation/_color.scss
+++ b/assets/scss/foundation/_color.scss
@@ -2,10 +2,14 @@
 // 汎用的に使用する場合は色で命名する
 
 $c-white: #FFFFFF;
+$c-black: #000000;
 $c-gray: #F7F7F7;
+$c-gainsboro: #dcdcdc;
 $c-lightPurple: #B8AED5;
 $c-mainFont: #333333;
-$c-mainButton: #250D65;
+$c-purpleFont: #C1AFDE;
+$c-mainButton-dark: #250D65;
+$c-mainButton-light: #7633A4;
 $c-mainTitle: #391E88;
 $c-bgFooter: #120E19;
 $c-newsNow: #F1EBF8;
