--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,8 +23,12 @@
 // -----------------------------------------------------------------
 
 @import "component/mainButton";
-@import "component/topButton";
+@import "component/clearButton";
+@import "component/buttonTriangle";
 @import "component/mainTitle";
+@import "component/_subTitle";
+@import "component/time";
+@import "component/newsIcon";
 @import "component/newsItem";
 @import "component/serviceCard";
 @import "component/serviceContext";
