[new]コンポーネントファイルの構成変更、NEWSページのコンポーネント実装

--- a/assets/scss/component/global/_clearButton.scss
+++ b/assets/scss/component/global/_clearButton.scss
@@ -1,6 +1,6 @@
-@use "../foundation/color" as cl;
-@use "../foundation/mixin" as bp;
-@use "../foundation/font" as fs;
+@use "../../foundation/color" as cl;
+@use "../../foundation/mixin" as bp;
+@use "../../foundation/font" as fs;
 
 .c-clearButton {
     font-family: fs.$montserrat;
