--- a/assets/scss/component/global/_mainTitle.scss
+++ b/assets/scss/component/global/_mainTitle.scss
@@ -1,5 +1,6 @@
-@use "../foundation/color" as cl;
-@use "../foundation/mixin" as bp;
+@use "../../foundation/color" as cl;
+@use "../../foundation/mixin" as bp;
+@use "../../foundation/font" as fs;
 
 .c-mainTitle {
     font-size: 36px;
