--- a/assets/scss/component/news/_newsIcon.scss
+++ b/assets/scss/component/news/_newsIcon.scss
@@ -1,5 +1,5 @@
-@use "../foundation/color" as cl;
-@use "../foundation/mixin" as bp;
+@use "../../foundation/color" as cl;
+@use "../../foundation/mixin" as bp;
 
 .c-newsIcon {
     display: flex;
