--- a/assets/scss/component/service/_serviceCard.scss
+++ b/assets/scss/component/service/_serviceCard.scss
@@ -1,5 +1,6 @@
-@use "../foundation/color" as cl;
-@use "../foundation/mixin" as bp;
+@use "../../foundation/color" as cl;
+@use "../../foundation/mixin" as bp;
+@use "../../foundation/font" as fs;
 
 .c-serviceCard {
     width: 33%;
