--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -12,6 +12,18 @@
 @import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 *,
 ::before,
 ::after {
@@ -510,6 +522,49 @@ button {
   color: #391E88;
 }
 
+.c-breadcrumb {
+  width: 100%;
+  background-color: #F7F7F7;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  line-height: 21.6px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 7%;
+}
+.c-breadcrumb .c-breadcrumb__inner {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+}
+.c-breadcrumb .c-breadcrumb__home {
+  color: #391E88;
+}
+.c-breadcrumb .c-breadcrumb__arrow {
+  display: inline-block;
+  position: relative;
+  top: -24%;
+  width: 0;
+  height: 0;
+}
+.c-breadcrumb .c-breadcrumb__arrow::before,
+.c-breadcrumb .c-breadcrumb__arrow::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 7px;
+  height: 1px;
+  background: #333333;
+}
+.c-breadcrumb .c-breadcrumb__arrow::before {
+  transform: rotate(160deg);
+  transform-origin: bottom left;
+}
+.c-breadcrumb .c-breadcrumb__arrow::after {
+  transform: rotate(-160deg);
+  transform-origin: bottom left;
+}
+
 .c-time {
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
@@ -537,6 +592,33 @@ button {
 .c-newsItem .c-newsItem__context {
   font-size: 14px;
   line-height: 25.2px;
+}
+
+.c-pager {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  color: #FFFFFF;
+  background-image: linear-gradient(to right, #7633A4, #250D65);
+  cursor: pointer;
+}
+.c-pager .c-pager__num {
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 20px;
+}
+
+.c-pagers {
+  display: flex;
+  gap: 10px;
+}
+.c-pagers .c-pagers__first {
+  color: #333333;
+  background-color: #F1EBF8;
+  background-image: none;
 }
 
 .c-serviceCard {
