[new]ヘッダーとフッターのスタイリング

--- a/assets/scss/foundation/_color.scss
+++ b/assets/scss/foundation/_color.scss
@@ -7,7 +7,7 @@ $c-gray: #F7F7F7;
 $c-gainsboro: #dcdcdc;
 $c-lightPurple: #B8AED5;
 $c-mainFont: #333333;
-$c-purpleFont: #C1AFDE;
+$c-purpleFont: #A798B7;
 $c-mainButton-dark: #250D65;
 $c-mainButton-light: #7633A4;
 $c-mainTitle: #391E88;
