--- a/assets/scss/component/global/_clearButton.scss
+++ b/assets/scss/component/global/_clearButton.scss
@@ -10,10 +10,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    // color: cl.$c-white;
+    color: cl.$c-white;
     width: 220px;
     height: 56px;
-    border: 1px solid cl.$c-mainFont;
+    border: 1px solid cl.$c-white;
     border-radius: 50px;
     padding: 20px;
     cursor: pointer;
