--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,3 +1,12 @@
 // bodyやmain周りのスタイリング
 @use "../foundation/color" as cl;
 @use "../foundation/mixin" as bp;
+
+.l-header-bg {
+    background-image: url("/assets/img/bg/bg_header.png");
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    background-size: 100% 100%;
+    color: cl.$c-white;
+}
