--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -24,6 +24,12 @@
 @import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 *,
 ::before,
 ::after {
@@ -461,6 +467,79 @@ button {
   cursor: pointer;
 }
 
+.l-header {
+  font-family: "Montserrat", sans-serif;
+  display: flex;
+  justify-content: space-between;
+  padding: 28px;
+}
+.l-header .l-header__nav {
+  font-size: 14px;
+  line-height: 25.6px;
+}
+.l-header .l-header__nav .l-header__nav-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  cursor: pointer;
+}
+
+.l-header-sub {
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  margin-top: 15%;
+}
+.l-header-sub .l-header-sub__main-title {
+  font-size: 72px;
+  font-weight: bold;
+  line-height: 72px;
+}
+.l-header-sub .l-header-sub__sub-title {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 43.2px;
+  margin-top: 20px;
+}
+.l-header-sub .l-header-sub__button {
+  display: flex;
+  justify-content: center;
+  margin-top: 5%;
+}
+
+.l-footer {
+  font-family: "Montserrat", sans-serif;
+  background-color: #120E19;
+  color: #FFFFFF;
+  height: 190px;
+}
+.l-footer .l-footer__nav {
+  padding-top: 64px;
+}
+.l-footer .l-footer__nav .l-footer__nav-list {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+.l-footer .l-footer__nav .l-footer__nav-list .l-footer__nav-list-item {
+  font-size: 12px;
+}
+.l-footer .l-footer__copy {
+  font-size: 10px;
+  color: #A798B7;
+  text-align: center;
+  margin-top: 28px;
+}
+
+.l-header-bg {
+  background-image: url("/assets/img/bg/bg_header.png");
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  background-size: 100% 100%;
+  color: #FFFFFF;
+}
+
 .c-mainButton {
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
@@ -494,9 +573,10 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #FFFFFF;
   width: 220px;
   height: 56px;
-  border: 1px solid #333333;
+  border: 1px solid #FFFFFF;
   border-radius: 50px;
   padding: 20px;
   cursor: pointer;
