[new]ニュースページのスタイリング

--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -1,2 +1,20 @@
 @use "../foundation/color" as cl;
 @use "../foundation/mixin" as bp;
+
+.l-contact {
+    background-color: cl.$c-gray;
+    text-align: center;
+    padding: 64px 0;
+
+    .l-contact__message {
+        font-size: 15px;
+        line-height: 27px;
+        margin-top: 32px;
+    }
+
+    .l-contact__button {
+        display: flex;
+        justify-content: center;
+        margin-top: 32px;
+    }
+}
