--- a/assets/scss/foundation/_mixin.scss
+++ b/assets/scss/foundation/_mixin.scss
@@ -1,11 +1,3 @@
-// 絶対配置中央揃え
-@mixin center-pos {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
 // ブレイクポイント（min-width）
 $mq-breakpoints: (
     'sm': 640px,
@@ -23,5 +15,45 @@ $mq-breakpoints: (
 
     @media screen and (#{$rule}-width: $breakpoint) {
         @content;
+    }
+}
+
+// 左右中央揃え
+@mixin content-center($width) {
+    width: $width;
+    margin: auto;
+}
+
+// ボタンの中央揃え
+@mixin button-center {
+    display: flex;
+    justify-content: center;
+    margin-top: 16px;
+}
+
+@mixin index-margin {
+    margin-top: 64px;
+}
+
+// 下線が左から右に流れるホバーアニメーション
+@mixin hover-underline($color) {
+    display: inline-block;
+
+    &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: $color;
+        transform: scale(0, 1);
+        transform-origin: right top;
+        transition: transform 0.3s ease;
+    }
+
+    &:hover::after {
+        transform: scale(1, 1);
+        transform-origin: left top;
     }
 }
