--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -686,7 +686,7 @@ button {
   gap: 16px;
 }
 .c-newsItem .c-newsItem__context {
-  width: 58%;
+  width: 72%;
   font-size: 14px;
   line-height: 25.2px;
 }
@@ -781,12 +781,159 @@ button {
   margin-top: 16px;
 }
 
+.p-index-news {
+  width: 68%;
+  margin: auto;
+}
+.p-index-news .p-index-news__inner {
+  display: flex;
+  justify-content: space-between;
+  gap: 36px;
+  margin-top: 64px;
+}
+.p-index-news .p-index-news__list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.p-index-service {
+  width: 88%;
+  margin: auto;
+}
+.p-index-service .p-index-service__title {
+  text-align: center;
+  margin-top: 64px;
+}
+.p-index-service .p-index-service__cards {
+  display: flex;
+  gap: 16px;
+  margin-top: 36px;
+}
+.p-index-service .p-index-service__button {
+  display: flex;
+  justify-content: center;
+  margin-top: 36px;
+  margin-bottom: 64px;
+}
+
+.p-index-works {
+  display: flex;
+  width: 100%;
+  margin-left: -5%;
+  margin-bottom: 32px;
+}
+.p-index-works .p-index-works__img {
+  width: 50%;
+  aspect-ratio: 750/540;
+  -o-object-fit: cover;
+     object-fit: cover;
+  padding-top: 5%;
+}
+.p-index-works .p-index-works__img img {
+  position: relative;
+  left: 20%;
+}
+.p-index-works .p-index-works__context {
+  background-color: #F7F7F7;
+  width: 54%;
+  display: flex;
+  gap: 24px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  aspect-ratio: 780/660;
+  padding-left: 10%;
+}
+
+.p-index-company {
+  position: relative;
+  width: 88%;
+  margin: auto;
+  overflow: hidden;
+  padding: 64px 0;
+}
+.p-index-company .p-index-company__bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.p-index-company .p-index-company__context {
+  position: relative;
+  text-align: center;
+  z-index: 2;
+}
+.p-index-company .p-index-company__context .p-index-company__context-header {
+  position: relative;
+  font-size: 40px;
+  font-weight: 700;
+  margin: 16px;
+}
+.p-index-company .p-index-company__context .p-index-company__context-header span {
+  position: relative;
+  display: inline-block;
+}
+.p-index-company .p-index-company__context .p-index-company__context-header span::after {
+  content: "";
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 100%;
+  border-bottom: 10px solid #F5F534;
+  z-index: -1;
+}
+.p-index-company .p-index-company__context .p-index-company__context-message {
+  margin-top: 16px;
+}
+.p-index-company .p-index-company__context-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.p-index-recruit {
+  display: flex;
+  width: 77%;
+  margin: auto;
+  padding: 64px 0;
+}
+.p-index-recruit .p-index-recruit__context {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #F7F7F7;
+  width: 40%;
+  aspect-ratio: 444/346.8;
+  text-align: center;
+}
+.p-index-recruit .p-index-recruit__context .p-index-recruit__context-text {
+  margin-top: 16px;
+}
+.p-index-recruit .p-index-recruit__context .p-index-recruit__context-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+.p-index-recruit .p-index-recruit__img {
+  width: 60%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  aspect-ratio: 666/346.8;
+}
+.p-index-recruit .p-index-recruit__img img {
+  height: 100%;
+}
+
 .p-news-index .p-news-index__newsItems {
-  width: 76%;
+  width: 64%;
+  margin: auto;
   display: flex;
   flex-direction: column;
   gap: 14px;
-  margin: auto;
   padding-top: 80px;
 }
 .p-news-index .p-news-index__newsItems .p-news-index__newsItems-item {
