--- a/assets/scss/foundation/_color.scss
+++ b/assets/scss/foundation/_color.scss
@@ -1,9 +1,7 @@
-// 色の使われ方が決まっていれば役割
-// 汎用的に使用する場合は色で命名する
-
 $c-white: #FFFFFF;
 $c-black: #000000;
 $c-gray: #F7F7F7;
+$c-imgBorder: #ECECEC;
 $c-gainsboro: #dcdcdc;
 $c-lightPurple: #B8AED5;
 $c-mainFont: #333333;
