--- a/assets/scss/foundation/_base.scss
+++ b/assets/scss/foundation/_base.scss
@@ -31,6 +31,10 @@ img {
 input {
     margin: 0;
     padding: 0;
+
+    &[type="radio"] {
+        all: revert;
+    }
 }
 
 textarea {
@@ -47,3 +51,4 @@ button {
     color: inherit;
     cursor: pointer;
 }
+
