--- a/assets/scss/project/_company.scss
+++ b/assets/scss/project/_company.scss
@@ -1,2 +1,79 @@
 @use "../foundation/color" as cl;
 @use "../foundation/mixin" as bp;
+
+.p-company {
+    width: 77%;
+    margin: auto;
+
+    .p-company__represent {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 80px;
+
+        .p-company__represent-img {
+            width: 40%;
+            object-fit: cover;
+            aspect-ratio: 445 / 330;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .p-company__represent-message {
+            width: 56%;
+            font-size: 15px;
+            line-height: 27px;
+
+            .p-company__represent-message-item:not(:first-of-type) {
+                margin-top: 12px;
+            }
+        }
+    }
+
+    .p-company__overview {
+        margin: 80px 0;
+
+        .p-company__overview-title {
+            text-align: center;
+        }
+
+        .p-company__overview-list {
+            margin-top: 36px;
+
+            .p-company__overview-list-item {
+                display: flex;
+                padding: 26px;
+                border-bottom: 1px solid cl.$c-lightGray;
+
+                .p-company__overview-list-item-title {
+                    width: 24%;
+                }
+
+                .p-company__overview-list-item-text {
+                    width: 70%;
+                }
+            }
+        }
+
+        .p-company__overview-img {
+            width: 100%;
+            aspect-ratio: 1110 / 400;
+            margin-top: 36px;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        .p-company__overview-map-link {
+            font-size: 14px;
+            line-height: 25.2px;
+            color: cl.$c-purpleFont-dark;
+        }
+    }
+}
