--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -30,6 +30,8 @@
 @import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 *,
 ::before,
 ::after {
@@ -450,6 +452,9 @@ input {
   margin: 0;
   padding: 0;
 }
+input[type=radio] {
+  all: revert;
+}
 
 textarea {
   padding: 0;
@@ -820,6 +825,140 @@ button {
   margin-top: 16px;
 }
 
+.p-company {
+  width: 77%;
+  margin: auto;
+}
+.p-company .p-company__represent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 80px;
+}
+.p-company .p-company__represent .p-company__represent-img {
+  width: 40%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  aspect-ratio: 445/330;
+}
+.p-company .p-company__represent .p-company__represent-img img {
+  width: 100%;
+  height: 100%;
+}
+.p-company .p-company__represent .p-company__represent-message {
+  width: 56%;
+  font-size: 15px;
+  line-height: 27px;
+}
+.p-company .p-company__represent .p-company__represent-message .p-company__represent-message-item:not(:first-of-type) {
+  margin-top: 12px;
+}
+.p-company .p-company__overview {
+  margin: 80px 0;
+}
+.p-company .p-company__overview .p-company__overview-title {
+  text-align: center;
+}
+.p-company .p-company__overview .p-company__overview-list {
+  margin-top: 36px;
+}
+.p-company .p-company__overview .p-company__overview-list .p-company__overview-list-item {
+  display: flex;
+  padding: 26px;
+  border-bottom: 1px solid #DDDDDD;
+}
+.p-company .p-company__overview .p-company__overview-list .p-company__overview-list-item .p-company__overview-list-item-title {
+  width: 24%;
+}
+.p-company .p-company__overview .p-company__overview-list .p-company__overview-list-item .p-company__overview-list-item-text {
+  width: 70%;
+}
+.p-company .p-company__overview .p-company__overview-img {
+  width: 100%;
+  aspect-ratio: 1110/400;
+  margin-top: 36px;
+}
+.p-company .p-company__overview .p-company__overview-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.p-company .p-company__overview .p-company__overview-map-link {
+  font-size: 14px;
+  line-height: 25.2px;
+  color: #240B6B;
+}
+
+.p-contact {
+  width: 52%;
+  margin: auto;
+  padding: 120px 0;
+}
+.p-contact .p-contact__text {
+  font-size: 15px;
+  line-height: 27px;
+  text-align: center;
+}
+.p-contact .p-contact__form {
+  background-color: #F7F7F7;
+  padding: 80px;
+  margin-top: 36px;
+}
+.p-contact .p-contact__form .p-contact__form-list .p-contact__form-list-item {
+  display: flex;
+  flex-direction: column;
+}
+.p-contact .p-contact__form .p-contact__form-list .p-contact__form-list-item .p-contact__form-list-item-label {
+  font-size: 15px;
+  font-weight: bold;
+}
+.p-contact .p-contact__form .p-contact__form-list .p-contact__form-list-item .p-contact__form-list-item-radio {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin-top: 12px;
+}
+.p-contact .p-contact__form .p-contact__form-list .p-contact__form-list-item .p-contact__form-list-item-input {
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  border: 1px solid #AAAAAA;
+  padding: 10px;
+  width: 50%;
+  margin-top: 12px;
+}
+.p-contact .p-contact__form .p-contact__form-list .p-contact__form-list-item .p-contact__form-list-item-textarea {
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  border: 1px solid #AAAAAA;
+  padding: 10px;
+  width: 100%;
+  height: 200px;
+  margin-top: 12px;
+}
+.p-contact .p-contact__form .p-contact__form-list .p-contact__form-list-item:not(:first-child) {
+  margin-top: 24px;
+}
+.p-contact .p-contact__form .p-contact__form-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+  margin-top: 36px;
+}
+
+.required {
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 14.4px;
+  color: #391E88;
+  padding-left: 8px;
+}
+
+.tell-about {
+  font-size: 12px;
+  line-height: 14.4px;
+}
+
 .p-index-news {
   width: 68%;
   margin: auto;
@@ -890,8 +1029,7 @@ button {
   position: relative;
   width: 88%;
   margin: auto;
-  overflow: hidden;
-  padding: 64px 0;
+  padding: 132px 0;
 }
 .p-index-company .p-index-company__bg {
   position: absolute;
@@ -900,6 +1038,12 @@ button {
   width: 100%;
   height: 100%;
   z-index: 1;
+  aspect-ratio: 1300/615.5;
+}
+.p-index-company .p-index-company__bg img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .p-index-company .p-index-company__context {
   position: relative;
@@ -965,6 +1109,108 @@ button {
 }
 .p-index-recruit .p-index-recruit__img img {
   height: 100%;
+}
+
+.p-recruit {
+  background-image: url("/assets/img/bg/bg_recruit.png");
+  padding: 120px 0;
+}
+.p-recruit .p-recruit__title {
+  width: 78%;
+  margin: auto;
+  text-align: center;
+  padding-bottom: 36px;
+}
+.p-recruit .p-recruit__title .p-recruit__title-main {
+  font-family: "Montserrat", sans-serif;
+  font-size: 72px;
+  line-height: 72px;
+  font-weight: bold;
+  color: #391E88;
+}
+.p-recruit .p-recruit__title .p-recruit__title-sub {
+  font-size: 32px;
+  line-height: 53.6px;
+  color: #391E88;
+  margin-top: 18px;
+}
+.p-recruit .p-recruit__title .p-recruit__title-text {
+  font-size: 16px;
+  line-height: 28.8px;
+  margin-top: 18px;
+}
+.p-recruit .p-recruit__img {
+  width: 100%;
+}
+.p-recruit .p-recruit__img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.p-recruit .p-recruit__context {
+  width: 78%;
+  margin: auto;
+  padding: 80px 0;
+}
+.p-recruit .p-recruit__context .p-recruit__context-title {
+  text-align: center;
+}
+.p-recruit .p-recruit__context .p-recruit__context-inner {
+  background-color: #FFFFFF;
+  border: 1px solid #B067CF;
+  padding: 50px;
+  margin-top: 36px;
+}
+.p-recruit .p-recruit__context .p-recruit__context-title {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 43.2px;
+  text-align: center;
+}
+.p-recruit .p-recruit__context .p-recruit__context-list {
+  margin-top: 36px;
+}
+.p-recruit .p-recruit__context .p-recruit__context-list .p-recruit__context-list-item {
+  display: flex;
+  padding: 26px;
+  border-bottom: 1px solid #DDDDDD;
+}
+.p-recruit .p-recruit__context .p-recruit__context-list .p-recruit__context-list-item .p-recruit__context-list-item-title {
+  width: 24%;
+}
+.p-recruit .p-recruit__context .p-recruit__context-list .p-recruit__context-list-item .p-recruit__context-list-item-text {
+  width: 70%;
+}
+.p-recruit .p-recruit__context .p-recruit__context-list .p-recruit__context-list-item .p-recruit__context-list-item-text .p-recruit__context-list-item-text-list {
+  margin-top: 18px;
+}
+.p-recruit .p-recruit__context .p-recruit__context-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+  margin-top: 36px;
+}
+.p-recruit .p-recruit__context .p-recruit__context-link {
+  font-size: 12px;
+  line-height: 21.6px;
+  text-align: center;
+  margin-top: 12px;
+}
+.p-recruit .p-recruit__video {
+  width: 78%;
+  margin: auto;
+}
+.p-recruit .p-recruit__video .p-recruit__video-title {
+  text-align: center;
+}
+.p-recruit .p-recruit__video .p-recruit__video-img {
+  width: 100%;
+  aspect-ratio: 1110/624;
+  margin-top: 36px;
+}
+.p-recruit .p-recruit__video .p-recruit__video-img img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-service {
