--- a/assets/scss/project/_recruit.scss
+++ b/assets/scss/project/_recruit.scss
@@ -36,8 +36,10 @@
 
     .p-recruit__img {
         width: 100%;
+        aspect-ratio: 1440 / 824;
 
         img {
+            width: 100%;
             object-fit: cover;
         }
     }
